# resonance

./: .dockerignore  .env.example  .gitignore  .release-please-manifest.json  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DESIGN.md  LICENSE  README.md  SECURITY.md  claude-progress.txt  deny.toml  dev plan.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  init.sh  package.json  pnpm-lock.yaml  release-please-config.json
.cargo/: audit.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  issue-label-config.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/rust-setup/: action.yml
.github/actions/setup-node-pnpm/: action.yml
.github/workflows/: README.md  auto-label-issues.yml  ci.yml  docker-build.yml  docker.yml  labeler.yml  release.yml  security.yml
apps/api/: CHANGELOG.md  CODE_REVIEW_SIMILARITY_SERVICE.md  Cargo.toml
apps/api/migrations/: 20250101000001_extensions.sql  20250101000002_custom_types.sql  20250101000003_users_auth.sql  20250101000004_library_tables.sql  20250101000005_user_data_tables.sql  20250101000006_additional_tables.sql  20250101000007_indexes.sql  20250101000008_triggers.sql  20250101000009_seed_data.sql  20250101000010_add_track_availability.sql  20250101000011_add_artist_album_unique_indexes.sql  20250101000012_device_presence.sql  20250101000013_queue_items.sql  20250101000014_queue_prefetch_index.sql  20250101000015_chat_messages.sql  20250101000016_add_password_updated_at.sql  20250101000017_add_audio_features_vector.sql  20250101000018_add_discover_playlist_unique_index.sql  20250101000019_add_cluster_playlist_support.sql  20250101000020_system_settings.sql  20250101000021_rls_policies.sql
apps/api/src/: config.rs  error.rs  lib.rs  main.rs
apps/api/src/graphql/: mod.rs  pagination.rs  schema.rs
apps/api/src/graphql/guards/: mod.rs  rate_limit.rs
apps/api/src/graphql/loaders/: album.rs  albums_by_artist.rs  artist.rs  mod.rs  track.rs  tracks_by_album.rs  tracks_by_artist.rs
apps/api/src/graphql/mutation/: admin.rs  auth.rs  chat.rs  integrations.rs  mod.rs  playlist.rs  preferences.rs  system_settings.rs
apps/api/src/graphql/query/: admin.rs  chat.rs  library.rs  mod.rs  playlist.rs  search.rs  system_settings.rs  user.rs
apps/api/src/graphql/types/: admin.rs  album.rs  artist.rs  chat.rs  library.rs  mod.rs  playlist.rs  search.rs  system_settings.rs  track.rs  user.rs
apps/api/src/middleware/: auth.rs  mod.rs  rate_limit.rs  security_headers.rs
apps/api/src/models/: album.rs  artist.rs  chat.rs  device.rs  mod.rs  playlist.rs  queue.rs  system_settings.rs  track.rs  user.rs
apps/api/src/repositories/: admin.rs  album.rs  artist.rs  chat.rs  device.rs  mod.rs  playlist.rs  queue.rs  session.rs  system_settings.rs  track.rs  user.rs  utils.rs
apps/api/src/routes/: auth.rs  health.rs  mod.rs  streaming.rs
apps/api/src/services/: auth.rs  chat.rs  config.rs  encryption.rs  health.rs  lastfm.rs  listenbrainz.rs  meilisearch.rs  mod.rs  playlist.rs  search.rs  similarity.rs  transcoder.rs
apps/api/src/websocket/: chat_handler.rs  connection.rs  handler.rs  messages.rs  mod.rs  presence.rs  pubsub.rs  sync.rs
apps/api/tests/: auth_test.rs  health_test.rs  preferences_test.rs  similarity_test.rs  streaming_test.rs
apps/api/tests/common/: fixtures.rs  helpers.rs  mod.rs  similarity_fixtures.rs
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: autostart.rs  deep_link.rs  lib.rs  main.rs  media_keys.rs  notifications.rs  tray.rs  updater.rs
apps/desktop/src-tauri/src/discord/: connection.rs  mod.rs  presence.rs
apps/web/: CHANGELOG.md  eslint.config.js  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/web/src/audio/: AudioEngine.ts  constants.ts  index.ts  types.ts
apps/web/src/components/: IntegrationsManager.tsx  ProtectedRoute.tsx
apps/web/src/contexts/: AudioContext.ts
apps/web/src/hooks/: useAdmin.ts  useAudio.ts  useChat.ts  useDebouncedValue.ts  useDiscordRpc.ts  useDiscovery.ts  useIntegrations.ts  useKeyboardShortcuts.ts  useLibrary.ts  useLibraryPaths.ts  usePlaylistMutations.ts  usePreferences.ts  useScrobble.ts  useSearch.ts  useSetup.ts  useSimilarTracks.ts  useSystemSettings.ts
apps/web/src/lib/: api.test.ts  api.ts  mappers.ts  queryKeys.ts  utils.ts
apps/web/src/pages/: Admin.tsx  Album.tsx  Artist.tsx  Home.test.tsx  Home.tsx  Library.tsx  Login.tsx  NotFound.test.tsx  NotFound.tsx  Playlist.tsx  Register.tsx  Search.test.tsx  Search.tsx  Settings.tsx  Setup.tsx
apps/web/src/providers/: AudioProvider.tsx  SyncProvider.tsx
apps/web/src/services/: discordRpc.ts
apps/web/src/stores/: authStore.test.ts  authStore.ts  chatStore.ts  deviceStore.test.ts  deviceStore.ts  equalizerStore.ts  playerStore.test.ts  playerStore.ts  settingsStore.ts  toastStore.ts  visualizerStore.ts
apps/web/src/sync/: WebSocketClient.ts  adapters.ts  fetchTrackById.ts  index.ts  syncEvents.test.ts  syncEvents.ts  test-utils.ts  types.test.ts  types.ts  usePlaybackSync.test.ts  usePlaybackSync.ts  useQueueSync.test.ts  (+10 more)
apps/worker/: CHANGELOG.md  Cargo.toml
apps/worker/src/: config.rs  error.rs  main.rs
apps/worker/src/jobs/: clustering.rs  embedding_generation.rs  feature_extraction.rs  key_detection.rs  library_scan.rs  lidarr_sync.rs  mod.rs  mood_detection.rs  prefetch.rs  rhythm_analysis.rs  search_indexing.rs  spectral.rs  weekly_playlist.rs
apps/worker/tests/: embedding_generation_test.rs  feature_extraction_test.rs  library_scan_test.rs  lidarr_sync_test.rs  mood_detection_test.rs  prefetch_test.rs  weekly_playlist_test.rs
apps/worker/tests/common/: fixtures.rs  mocks.rs  mod.rs
docker/: Dockerfile  Dockerfile.web  Dockerfile.worker  init.sql  nginx.conf
docs/architecture/: similarity-system-review.md
docs/assets/: .gitkeep
(+131 files in other folders)
