[package]
name = "resonance-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Resonance music streaming API server"

[dependencies]
# Async runtime
tokio = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Database
sqlx = { workspace = true }

# GraphQL
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }

# External services
redis = { workspace = true }
meilisearch-sdk = { workspace = true }
reqwest = { workspace = true }

# Audio
symphonia = { workspace = true }

# Auth
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }

[[bin]]
name = "resonance-api"
path = "src/main.rs"
