[package]
name = "resonance-api"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Resonance music streaming API server"

[dependencies]
# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
futures-core = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
futures-util = { workspace = true }
dashmap = { workspace = true }
tokio-stream = { workspace = true }

# Database
sqlx = { workspace = true }

# GraphQL
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
once_cell = { workspace = true }

# External services
redis = { workspace = true }
meilisearch-sdk = { workspace = true }
reqwest = { workspace = true }

# Audio
symphonia = { workspace = true }

# Auth
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
sha2 = { workspace = true }

# Encryption
aes-gcm = { workspace = true }
hkdf = { workspace = true }
base64 = { workspace = true }

# Internal crates
resonance-shared-config = { workspace = true }
resonance-lastfm-client = { workspace = true }
resonance-ollama-client = { workspace = true }

# HTTP utilities
httpdate = { workspace = true }

# URL encoding
url = { workspace = true }

[lib]
name = "resonance_api"
path = "src/lib.rs"

[[bin]]
name = "resonance-api"
path = "src/main.rs"

[dev-dependencies]
# Test utilities
tokio-test = { workspace = true }
temp-env = { workspace = true }
assert_matches = { workspace = true }
test-log = { workspace = true }
tracing-test = { workspace = true }
wiremock = { workspace = true }
fake = { workspace = true }
rstest = { workspace = true }
once_cell = { workspace = true }
tempfile = "3"

# Shared test mocks
resonance-test-utils = { workspace = true }

# HTTP testing
axum-test = "14"
tower = { workspace = true, features = ["util"] }
