[package]
name = "resonance-worker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Resonance background job processor"

[dependencies]
# Async runtime
tokio = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }

# External services
redis = { workspace = true }
reqwest = { workspace = true }

# URL parsing (for credential redaction)
url = { workspace = true }

# Audio processing
symphonia = { workspace = true }
lofty = { workspace = true }

# FFT / DSP (pure-Rust, no C dependencies)
rustfft = { workspace = true }
realfft = { workspace = true }
apodize = { workspace = true }

# Machine learning / clustering (for taste-based playlist generation)
linfa = "0.7"
linfa-clustering = "0.7"
ndarray = "0.15"
rand = "0.8"
rand_xoshiro = "0.6"

# File system
walkdir = { workspace = true }
sha2 = { workspace = true }

# Internal crates
resonance-shared-config = { workspace = true }
resonance-ollama-client = { workspace = true }

[[bin]]
name = "resonance-worker"
path = "src/main.rs"

[dev-dependencies]
# Test utilities
tokio-test = { workspace = true }
temp-env = { workspace = true }
assert_matches = { workspace = true }
test-log = { workspace = true }
tracing-test = { workspace = true }
wiremock = { workspace = true }
fake = { workspace = true }
rstest = { workspace = true }
once_cell = { workspace = true }
tempfile = { workspace = true }

# Shared test mocks
resonance-test-utils = { workspace = true }
